<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/text_login"
        android:text="@string/login_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignLeft="@+id/text_login"
        android:layout_below="@+id/text_login"
        android:text="@string/login_name"/>

    <EditText
        android:id="@+id/edit_login_name"
        android:layout_width="@dimen/login_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_login"
        android:layout_below="@+id/text_login_name" />

    <TextView
        android:id="@+id/text_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_login"
        android:layout_below="@+id/edit_login_name"
        android:text="@string/login_password"/>

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="@dimen/login_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_login"
        android:layout_below="@+id/text_login_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_login_password"
        android:text="@string/login_button"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_login"
        android:text="@string/register"/>

</RelativeLayout>
